# cosmology

./: .gitignore  .readthedocs.yml  LICENSE.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
cosmology/: __init__.py  const.py  core.py  funcs.py  parameters.py
cosmology/tests/: test_cosmology.py
docs/: conf.py  index.rst
