[metadata]
name = cosmology
author = Cosmology Developers
author_email = n.tessore@ucl.ac.uk
license = BSD-3-Clause
license_file = LICENSE.rst
url = https://cosmology.readthedocs.io
description = cosmology background functions
long_description = file: README.rst
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
zip_safe = False
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    numpy

[options.extras_require]
test =
    pytest
    scipy
all =
    scipy
docs =
    sphinx

[tool:pytest]
testpaths = "cosmology" "docs"
addopts = --doctest-modules --doctest-glob='*.rst' --doctest-continue-on-failure

[pycodestyle]
max-line-length = 100
